@@ -464,22 +464,6 @@ class CTrigger extends CTriggerGeneral {
 			$result[$trigger['triggerid']] += $trigger;
 		}
 
-		if (!is_null($options['selectLastEvent'])) {
-			foreach ($result as $triggerId => $trigger) {
-				$lastEvent = API::Event()->get(array(
-					'object' => EVENT_SOURCE_TRIGGERS,
-					'objectids' => $triggerId,
-					'output' => $options['selectLastEvent'],
-					'nopermissions' => true,
-					'sortfield' => array('eventid'),
-					'sortorder' => ZBX_SORT_DOWN,
-					'limit' => 1
-				));
-
-				$result[$triggerId]['lastEvent'] = $lastEvent ? reset($lastEvent) : array();
-			}
-		}
-
 		if ($options['groupids'] !== null && $options['selectGroups'] === null) {
 			$options['selectGroups'] = API_OUTPUT_REFER;
 		}
@@ -1807,6 +1791,24 @@ class CTrigger extends CTriggerGeneral {
 				'preservekeys' => true,
 			));
 			$result = $relationMap->mapOne($result, $discoveryRules, 'discoveryRule');
+		}
+
+		// adding last event
+		if ($options['selectLastEvent'] !== null) {
+			foreach ($result as $triggerId => $trigger) {
+				$lastEvent = API::Event()->get(array(
+					'source' => EVENT_SOURCE_TRIGGERS,
+					'object' => EVENT_OBJECT_TRIGGER,
+					'objectids' => $triggerId,
+					'output' => $options['selectLastEvent'],
+					'nopermissions' => true,
+					'sortfield' => array('clock', 'eventid'),
+					'sortorder' => ZBX_SORT_DOWN,
+					'limit' => 1
+				));
+
+				$result[$triggerId]['lastEvent'] = $lastEvent ? reset($lastEvent) : array();
+			}
 		}
 
 		return $result;
