@@ -374,9 +374,11 @@ if ($source == EVENT_OBJECT_TRIGGER) {
 	$sourceName = 'trigger';
 
 	$firstEvent = API::Event()->get(array(
+		'source' => EVENT_SOURCE_TRIGGERS,
+		'object' => EVENT_OBJECT_TRIGGER,
 		'output' => API_OUTPUT_EXTEND,
 		'objectids' => !empty($_REQUEST['triggerid']) ? $_REQUEST['triggerid'] : null,
-		'sortfield' => 'eventid',
+		'sortfield' => array('clock'),
 		'sortorder' => ZBX_SORT_UP,
 		'limit' => 1
 	));
@@ -391,7 +393,7 @@ else {
 		'output' => API_OUTPUT_EXTEND,
 		'source' => EVENT_SOURCE_DISCOVERY,
 		'object' => EVENT_OBJECT_DHOST,
-		'sortfield' => 'eventid',
+		'sortfield' => array('clock'),
 		'sortorder' => ZBX_SORT_UP,
 		'limit' => 1
 	));
@@ -401,7 +403,7 @@ else {
 		'output' => API_OUTPUT_EXTEND,
 		'source' => EVENT_SOURCE_DISCOVERY,
 		'object' => EVENT_OBJECT_DSERVICE,
-		'sortfield' => 'eventid',
+		'sortfield' => array('clock'),
 		'sortorder' => ZBX_SORT_UP,
 		'limit' => 1
 	));
@@ -442,7 +444,9 @@ else {
 			'object' => EVENT_OBJECT_DHOST,
 			'time_from' => $from,
 			'time_till' => $till,
-			'output' => array('eventid'),
+			'output' => array('eventid', 'object', 'objectid', 'clock', 'value'),
+			'sortfield' => array('clock', 'eventid'),
+			'sortorder' => ZBX_SORT_DOWN,
 			'limit' => $config['search_limit'] + 1
 		));
 		$dServiceEvents = API::Event()->get(array(
@@ -450,22 +454,18 @@ else {
 			'object' => EVENT_OBJECT_DSERVICE,
 			'time_from' => $from,
 			'time_till' => $till,
-			'output' => array('eventid'),
+			'output' => array('eventid', 'object', 'objectid', 'clock', 'value'),
+			'sortfield' => array('clock', 'eventid'),
+			'sortorder' => ZBX_SORT_DOWN,
 			'limit' => $config['search_limit'] + 1
 		));
 		$dsc_events = array_merge($dHostEvents, $dServiceEvents);
-		order_result($dsc_events, 'eventid', ZBX_SORT_DOWN);
+		CArrayHelper::sort($dsc_events, array(
+			array('field' => 'clock', 'order' => ZBX_SORT_DOWN),
+			array('field' => 'eventid', 'order' => ZBX_SORT_DOWN)
+		));
 		$dsc_events = array_slice($dsc_events, 0, $config['search_limit'] + 1);
 		$paging = getPagingLine($dsc_events);
-
-		// fetch events for the current page
-		$dsc_events = DBfetchArray(DBselect(
-			'SELECT e.*'.
-			' FROM events e'.
-			' WHERE e.source='.EVENT_SOURCE_DISCOVERY.
-				' AND '.dbConditionInt('e.eventid', zbx_objectValues($dsc_events, 'eventid')).
-			' ORDER BY eventid DESC'
-		));
 
 		// do we need to make CVS export button enabled?
 		$csv_disabled = zbx_empty($dsc_events);
@@ -618,12 +618,14 @@ else {
 
 			// query event with short data
 			$events = API::Event()->get(array(
+				'source' => EVENT_SOURCE_TRIGGERS,
+				'object' => EVENT_OBJECT_TRIGGER,
 				'nodeids' => get_current_nodeid(),
 				'objectids' => zbx_objectValues($triggers, 'triggerid'),
 				'time_from' => $from,
 				'time_till' => $till,
 				'output' => array('eventid'),
-				'sortfield' => 'eventid',
+				'sortfield' => array('clock', 'eventid'),
 				'sortorder' => ZBX_SORT_DOWN,
 				'limit' => $config['search_limit'] + 1
 			));
@@ -633,11 +635,13 @@ else {
 
 			// query event with extend data
 			$events = API::Event()->get(array(
+				'source' => EVENT_SOURCE_TRIGGERS,
+				'object' => EVENT_OBJECT_TRIGGER,
 				'nodeids' => get_current_nodeid(),
 				'eventids' => zbx_objectValues($events, 'eventid'),
 				'output' => API_OUTPUT_EXTEND,
 				'select_acknowledges' => API_OUTPUT_COUNT,
-				'sortfield' => 'eventid',
+				'sortfield' => array('clock', 'eventid'),
 				'sortorder' => ZBX_SORT_DOWN,
 				'nopermissions' => true
 			));
