@@ -447,14 +447,15 @@ $triggerEditable = API::Trigger()->get(array(
 if ($config['event_ack_enable']) {
 	// get all unacknowledged events, if trigger has unacknowledged even => it has events
 	$eventCounts = API::Event()->get(array(
+		'source' => EVENT_SOURCE_TRIGGERS,
+		'object' => EVENT_OBJECT_TRIGGER,
 		'countOutput' => true,
 		'groupCount' => true,
 		'objectids' => $triggerIds,
 		'filter' => array(
 			'acknowledged' => 0,
 			'value' => TRIGGER_VALUE_TRUE
-		),
-		'nopermissions' => true
+		)
 	));
 	foreach ($eventCounts as $eventCount) {
 		$triggers[$eventCount['objectid']]['hasEvents'] = true;
@@ -474,10 +475,11 @@ if ($config['event_ack_enable']) {
 	if (!empty($triggerIdsWithoutUnackEvents)) {
 		// for triggers without unack. events we try to select any event
 		$allEventCounts = API::Event()->get(array(
+			'source' => EVENT_SOURCE_TRIGGERS,
+			'object' => EVENT_OBJECT_TRIGGER,
 			'countOutput' => true,
 			'groupCount' => true,
-			'objectids' => $triggerIdsWithoutUnackEvents,
-			'nopermissions' => true
+			'objectids' => $triggerIdsWithoutUnackEvents
 		));
 		$allEventCounts = zbx_toHash($allEventCounts, 'objectid');
 
@@ -491,13 +493,16 @@ if ($config['event_ack_enable']) {
 
 if ($showEvents != EVENTS_OPTION_NOEVENT) {
 	$options = array(
+		'source' => EVENT_SOURCE_TRIGGERS,
+		'object' => EVENT_OBJECT_TRIGGER,
 		'nodeids' => get_current_nodeid(),
 		'objectids' => zbx_objectValues($triggers, 'triggerid'),
 		'output' => API_OUTPUT_EXTEND,
 		'select_acknowledges' => API_OUTPUT_COUNT,
 		'time_from' => time() - $config['event_expire'] * SEC_PER_DAY,
 		'time_till' => time(),
-		'nopermissions' => true
+		'sortfield' => array('clock', 'eventid'),
+		'sortorder' => ZBX_SORT_DOWN
 	);
 
 	switch ($showEvents) {
@@ -509,11 +514,6 @@ if ($showEvents != EVENTS_OPTION_NOEVENT) {
 			break;
 	}
 	$events = API::Event()->get($options);
-
-	CArrayHelper::sort($events, array(
-		array('field' => 'clock', 'order' => ZBX_SORT_DOWN),
-		array('field' => 'eventid', 'order' => ZBX_SORT_DOWN)
-	));
 
 	foreach ($events as $event) {
 		$triggers[$event['objectid']]['events'][] = $event;
