@@ -1008,16 +1008,6 @@ static int	DBpatch_2010040(void)
 	return DBrename_field("triggers", "value_flags", &field);
 }
 
-static int	DBpatch_2010041(void)
-{
-	return DBdrop_index("events", "events_1");
-}
-
-static int	DBpatch_2010042(void)
-{
-	return DBcreate_index("events", "events_1", "source,object,objectid,eventid", 1);
-}
-
 static int	DBpatch_2010043(void)
 {
 	const ZBX_FIELD field = {"state", "0", NULL, NULL, 0, ZBX_TYPE_INT, ZBX_NOTNULL, 0};
@@ -2188,6 +2178,26 @@ static int	DBpatch_2010187(void)
 	return DBset_not_null("sysmaps_elements", &field);
 }
 
+static int	DBpatch_2010188(void)
+{
+	return DBdrop_index("events", "events_1");
+}
+
+static int	DBpatch_2010189(void)
+{
+	return DBdrop_index("events", "events_2");
+}
+
+static int	DBpatch_2010190(void)
+{
+	return DBcreate_index("events", "events_1", "source,object,objectid,clock", 0);
+}
+
+static int	DBpatch_2010191(void)
+{
+	return DBcreate_index("events", "events_2", "source,object,clock", 0);
+}
+
 #define DBPATCH_START()					zbx_dbpatch_t	patches[] = {
 #define DBPATCH_ADD(version, duplicates, mandatory)	{DBpatch_##version, version, duplicates, mandatory},
 #define DBPATCH_END()					{NULL}};
@@ -2277,8 +2287,6 @@ int	DBcheck_version(void)
 	DBPATCH_ADD(2010038, 0, 0)
 	DBPATCH_ADD(2010039, 0, 0)
 	DBPATCH_ADD(2010040, 0, 1)
-	DBPATCH_ADD(2010041, 0, 0)
-	DBPATCH_ADD(2010042, 0, 0)
 	DBPATCH_ADD(2010043, 0, 1)
 	DBPATCH_ADD(2010044, 0, 1)
 	DBPATCH_ADD(2010045, 0, 1)
@@ -2424,6 +2432,10 @@ int	DBcheck_version(void)
 	DBPATCH_ADD(2010185, 0, 1)
 	DBPATCH_ADD(2010186, 0, 1)
 	DBPATCH_ADD(2010187, 0, 1)
+	DBPATCH_ADD(2010188, 0, 1)
+	DBPATCH_ADD(2010189, 0, 1)
+	DBPATCH_ADD(2010190, 0, 1)
+	DBPATCH_ADD(2010191, 0, 1)
 
 	DBPATCH_END()
 
